[package]
name = "pmw3901-ehal"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }
panic-rtt-core = {version="0.1.1", optional=true}

[features]
default = []
rttdebug = ["panic-rtt-core"]